fix(backend): napraw NPE w listContacts/getCustomerHistory dla kontaktów bez agenta
resolveAgentNamesForContacts() zwracała Map.of() (niemutowalną) gdy żaden
kontakt na stronie nie miał przypisanego agenta. agentNames.get(c.getAgentId())
wywoływane chwilę później dla tych samych kontaktów przekazuje null jako
klucz - Map.of() rzuca NPE na get(null), w przeciwieństwie do HashMap/
Collections.emptyMap(), które zwracają po prostu null.

Dotyczyło dwóch endpointów: GET listy kontaktów i historii kontaktów klienta,
za każdym razem gdy strona wyników nie zawiera żadnego kontaktu przypisanego
do agenta (typowy scenariusz - kontakty w kolejce, porzucone, nieodebrane).
Wykryte na żywo na kontenerze demo, nie przez testy jednostkowe (mockowany
userService nigdy nie wykonywał prawdziwej ścieżki resolveAgentNamesForContacts
z pustą listą agentIds).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>